Added decoding for received messages